--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,22 @@
 {
     "pylint.enabled": true,
+    "pylint.args": [],
     "flake8.enabled": true,
+    "flake8.args": [],
+    "python.testing.pytestEnabled": true,
     "python.testing.pytestArgs": [
         "."
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
+    "python.analysis.typeCheckingMode": "standard",
     "esbonio.server.enabled": true,
+    "esbonio.sphinx.confDir": "",
     "yaml.schemas": {
         "https://raw.githubusercontent.com/readthedocs/readthedocs.org/master/readthedocs/rtd_tests/fixtures/spec/v2/schema.json": "file:///t%3A/GitHub/jishaku/.readthedocs.yml",
         "https://json.schemastore.org/github-workflow.json": "file:///t%3A/GitHub/jishaku/.github/workflows/deploy.yml"
     },
-    "esbonio.sphinx.confDir": "",
-    "python.analysis.typeCheckingMode": "standard"
+    "python.analysis.ignore": [
+        "build",
+        "jishaku/features/scaffolds"
+    ]
 }
