--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,9 @@
         "https://raw.githubusercontent.com/readthedocs/readthedocs.org/master/readthedocs/rtd_tests/fixtures/spec/v2/schema.json": "file:///t%3A/GitHub/jishaku/.readthedocs.yml",
         "https://json.schemastore.org/github-workflow.json": "file:///t%3A/GitHub/jishaku/.github/workflows/deploy.yml"
     },
-    "python.analysis.ignore": [
+    "python.analysis.exclude": [
+        "**/__pycache__",
+        ".git",
         "build",
         "jishaku/features/scaffolds"
     ]
